<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <com.weiwangcn.betterspinner.library.material.MaterialBetterSpinner
                android:id="@+id/mbsChooseIdentifier"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="16dp"
                android:hint="@string/select_identifier_type"
                app:met_floatingLabelText="@string/identifier_type"
                app:met_helperText="@string/need_to_select_identifier"
                app:met_floatingLabel="normal"
                app:layout_constraintTop_toTopOf="parent"/>

        <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/clMainContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@id/mbsChooseIdentifier">

            <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tilCardNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/card_number"
                    app:helperText="@string/enter_card_number"
                    app:layout_constraintTop_toTopOf="parent"
                    android:visibility="gone">

                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/tietCardNumber"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:singleLine="true"
                        android:inputType="text"
                        android:imeOptions="actionDone"/>

            </com.google.android.material.textfield.TextInputLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/clAccount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="parent"
                    android:visibility="gone">

                <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/tilBic"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/bic"
                        app:helperText="@string/enter_bic"
                        app:layout_constraintTop_toTopOf="parent">

                    <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/tietBic"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:singleLine="true"
                            android:inputType="number"
                            android:imeOptions="actionNext"/>

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/tilAccountNumber"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/account_number"
                        android:layout_marginTop="16dp"
                        app:helperText="@string/enter_account_number"
                        app:layout_constraintTop_toBottomOf="@id/tilBic">

                    <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/tietAccountNumber"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:singleLine="true"
                            android:inputType="number"
                            android:imeOptions="actionNext"/>

                </com.google.android.material.textfield.TextInputLayout>

                <com.weiwangcn.betterspinner.library.material.MaterialBetterSpinner
                        android:id="@+id/mbsChoosePayment"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:hint="@string/select_payment_type"
                        app:met_floatingLabelText="@string/payment_type"
                        app:met_helperText="@string/need_payment_type"
                        app:met_floatingLabel="normal"
                        app:layout_constraintTop_toBottomOf="@id/tilAccountNumber"/>

                <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/tilLastName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/account_owner_last_name"
                        android:layout_marginTop="16dp"
                        app:helperText="@string/enter_last_name"
                        app:layout_constraintTop_toBottomOf="@id/mbsChoosePayment">

                    <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/tietLastName"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:singleLine="true"
                            android:inputType="text"
                            android:imeOptions="actionNext"/>

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/tilFirstName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/account_owner_first_name"
                        android:layout_marginTop="16dp"
                        app:helperText="@string/enter_first_name"
                        app:layout_constraintTop_toBottomOf="@id/tilLastName">

                    <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/tietFirstName"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:singleLine="true"
                            android:inputType="text"
                            android:imeOptions="actionNext"/>

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/tilMiddleName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/account_owner_middle_name"
                        android:layout_marginTop="16dp"
                        app:helperText="@string/enter_middle_name"
                        app:layout_constraintTop_toBottomOf="@id/tilFirstName">

                    <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/tietMiddleName"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:singleLine="true"
                            android:inputType="text"
                            android:imeOptions="actionDone"/>

                </com.google.android.material.textfield.TextInputLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.google.android.material.button.MaterialButton
                android:id="@+id/btnProceed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/proceed"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:insetLeft="10dp"
                android:insetRight="10dp"
                android:enabled="false"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/clMainContainer"
                app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>